try to fix socials widget styles on mobile

--- a/src/styles/frames/_socials.scss
+++ b/src/styles/frames/_socials.scss
@@ -21,10 +21,6 @@
       font-size: 1.125rem;
       line-height: 1.375;
     }
-
-    @media screen and (max-width: 479px) {
-      font-size: 1rem;
-    }
   }
 
   .frame-socials__disclaimer {
@@ -59,7 +55,11 @@
     }
 
     @media screen and (max-width: 767px) {
-      margin: 0.375rem 0.75rem;
+      margin: 0.375rem 0.5rem;
+    }
+
+    @media screen and (max-width: 479px) {
+      margin: 0.375rem;
     }
   }
 
